# django-bootstrap-datepicker-plus

./: .coveralls.yml  .editorconfig  .env.defaults  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  package-lock.json  package.json  pyproject.toml  runtests.py  setup.py
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md
.github/workflows/: build.yml  deploy.yml  docs.yml
bootstrap_date/: widgets.py
bootstrap_datepicker/: widgets.py
bootstrap_datepicker_plus/: DatePickerBaseInput.py  DatePickerDictionary.py  DateTimeBaseInputEx.py  __init__.py  _base.py  _compatibility.py  _helpers.py  widgets.py
bootstrap_datepicker_plus/static/bootstrap_datepicker_plus/css/: datepicker-widget.css
bootstrap_datepicker_plus/static/bootstrap_datepicker_plus/js/: bootstrap-datetimepicker.min.js  datepicker-widget.js
bootstrap_datepicker_plus/templates/bootstrap_datepicker_plus/: date-picker.html  input.html  time-picker.html
demo_project/: manage.py  requirements.txt
demo_project/demo_app/: apps.py  forms.py  models.py  urls.py  urls_1_8.py  views.py
demo_project/demo_app/migrations/: 0001_initial.py  0002_insert_demo_event.py
demo_project/demo_app/templates/demo_app/bootstrap3/: model-form.html
demo_project/demo_app/templates/demo_app/bootstrap4/: custom-form.html  model-form.html
demo_project/demo_app/templates/demo_app/custom_input/: date-picker.html  time-picker.html
demo_project/demo_app/templates/layouts/: bootstrap4.html  nav-bar.html
demo_project/demo_project/: context_processors.py  settings.py  urls.py  urls_1_8.py  wsgi.py
dev/myapp/: apps.py  forms.py  models.py  urls.py  views.py
dev/myapp/migrations/: 0001_initial.py  0002_insert_demo_event.py
dev/myapp/templates/layouts/: bootstrap3.html  bootstrap4.html
dev/myapp/templates/myapp/: custom-input.html  footer.html  nav-bar.html
dev/myapp/templates/myapp/bootstrap3/: crispy-form.html  custom-form.html  custom-formset.html  event_filter.html  layout.html  modal-form-index.html  modal-form.html
dev/myapp/templates/myapp/bootstrap4/: crispy-form.html  custom-form.html  custom-formset.html  event_filter.html  layout.html  modal-form-index.html  modal-form.html
dev/myapp/templates/myapp/bootstrap5/: crispy-form.html  custom-form.html  custom-formset.html  event_filter.html  layout.html  modal-form-index.html  modal-form.html
dev/myapp/templates/myapp/custom_input/: date-picker.html  time-picker.html
dev/mysite/: context_processors.py  settings.py  urls.py  wsgi.py
docs/: Contributing.rst  Getting_Started.rst  Template_Customizing.rst  Troubleshooting.rst  Usage.rst  Walkthrough.rst  conf.py  customization.rst  index.rst
docs/_static/css/: custom.css
docs/pydoc.io/: conf.py  index.rst
requirements/: base.txt  build.txt  dev.txt
src/bootstrap_datepicker_plus/: __init__.py  _base.py  _config.py  schemas.py  settings.py  widgets.py
src/bootstrap_datepicker_plus/static/bootstrap_datepicker_plus/css/: datepicker-widget.css
src/bootstrap_datepicker_plus/static/bootstrap_datepicker_plus/js/: datepicker-widget.js
src/bootstrap_datepicker_plus/templates/bootstrap_datepicker_plus/: input.html
tests/: conftest.py  pip-constraints.txt  requirements.txt  test_compatibility_patch.py  test_config.py  test_context_render.py  test_demo.py  test_format_pyjs.py  test_input_attrs.py  test_linked_inputs.py  test_options.py  test_render.py  test_settings.py  test_warnings.py  test_widgets.py
tests/snapshots/: compatible-input-custom.html  compatible-input.html  date-input-custom.html  date-input.html  time-input-custom.html  time-input.html
