[tool.poetry]
name = "django-bootstrap-datepicker-plus"
version = "0.0.0"
description = "Bootstrap3/Bootstrap4/Bootstrap5 DatePickerInput, TimePickerInput, DateTimePickerInput, MonthPickerInput, YearPickerInput"
readme = "README.rst"
authors = ["Munim Munna <6266677+monim67@users.noreply.github.com>"]
repository = "https://github.com/monim67/django-bootstrap-datepicker-plus"
documentation = "https://django-bootstrap-datepicker-plus.readthedocs.io/en/latest/"
packages = [{ include = "bootstrap_datepicker_plus/**/*" }]
license = "Apache-2.0"
keywords = [
    "django",
    "bootstrap",
    "date-picker",
    "time-picker",
    "datetime-picker",
    "date-range-picker",
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 4.0",
]

[tool.poetry.dependencies]
python = "^3.7"
Django = ">=2,<5"

[tool.poetry.group.peer.dependencies]
django-bootstrap4 = "^22.1"
django-bootstrap3 = "^21.2"

[tool.poetry.group.build.dependencies]
pytest-django = "^4.5.2"
black = "^22.6.0"
isort = "^5.10.1"
coverage = { version = "~6.2", extras = ["toml"] }
pylint = "^2.12.0"
rstcheck = { version = "^6.0.0.post1", extras = ["sphinx"] }
poethepoet = "^0.15.0"

[tool.poetry.group.dev.dependencies]
tox = "^3.24.5"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.master]
disable = ["R", "C", "missing-docstring", "unused-argument"]

[tool.pylint.format]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [".", "dev"]
DJANGO_SETTINGS_MODULE = "dev.mysite.settings"
addopts = "--reuse-db"
testpaths = ["tests"]

[tool.coverage.run]
command_line = "-m pytest"
source = ["bootstrap_datepicker_plus"]
relative_files = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{39,38,37}

[testenv]
deps = -r tests/requirements.txt
commands = pytest
allowlist_externals = pytest
"""

[tool.poe.tasks]
coverage = { shell = """coverage run && coverage xml && coverage report""" }

[tool.poe.tasks.lint]
shell = """
  python -m pylint bootstrap_datepicker_plus tests dev
  python -m black --check bootstrap_datepicker_plus tests dev
  python -m isort --check-only bootstrap_datepicker_plus tests dev
  rstcheck --report-level warning *.rst docs/*.rst
  """
