[project]
name = "django-bootstrap-datepicker-plus"
version = "0.0.0"
description = """\
    Bootstrap3/Bootstrap4/Bootstrap5 DatePickerInput, TimePickerInput, \
    DateTimePickerInput, MonthPickerInput, YearPickerInput\
    """
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Abdul Monim", email = "6266677+monim67@users.noreply.github.com" },
]
keywords = [
    "django",
    "bootstrap",
    "date-picker",
    "time-picker",
    "datetime-picker",
    "date-range-picker",
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed",
    "Framework :: Django",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 6.0",
]
dependencies = [
    "Django>=2,<7",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "typing-extensions>=4.5",
]

[project.urls]
repository = "https://github.com/monim67/django-bootstrap-datepicker-plus"
documentation = "https://django-bootstrap-datepicker-plus.readthedocs.io/en/latest/"

[tool.poetry]
packages = [{ include = "bootstrap_datepicker_plus", from = "src" }]

[tool.poetry.group.build.dependencies]
django-bootstrap3 = "^21.2"
django-bootstrap4 = "^22.1"
django-bootstrap5 = "^22.1"
django-bootstrap-modal-forms = "^2.2.1"
pytest-django = "^4.5.2"
pytest-dotenv = "^0.5.2"
black = "^24.1.1"
isort = "^5.13.2"
pyright = "^1.1.350"
pydocstyle = { extras = ["toml"], version = "^6.1.1" }
django-stubs = "^1.12.0"
coverage = { extras = ["toml"], version = "^6.5.0" }
rstcheck = "^6.1.0"
sphinx = "^4.3.2"
poethepoet = "^0.15.0"
django-crispy-forms = "^1.14.0"
django-filter = "^25.2"
crispy-bootstrap5 = "^0.7"
urllib3 = "^1.26.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
tox = "^3.24.5"

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry_bumpversion.file."src/bootstrap_datepicker_plus/__init__.py"]

[tool.isort]
py_version = "310"
profile = "black"

[tool.pydocstyle]
convention = "google"
add_select = "D401,D404"

[tool.pyright]
include = ["src", "dev", "tests"]

[tool.rstcheck]
ignore_directives = ["toctree", "code-block"]

[tool.django-stubs]
django_settings_module = "dev.mysite.settings"

[tool.pytest.ini_options]
pythonpath = "."                               # pytest-django needs it to find dev module
django_find_project = false
DJANGO_SETTINGS_MODULE = "dev.mysite.settings"
addopts = "--reuse-db"
testpaths = ["tests"]
env_files = [".env", ".env.defaults"]

[tool.coverage.run]
command_line = "-m pytest"
source = ["bootstrap_datepicker_plus"]
parallel = true

[tool.coverage.paths]
source = [
    "src/bootstrap_datepicker_plus",
    "**/site-packages/bootstrap_datepicker_plus",
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py{314,313,312,311,310}

[testenv]
allowlist_externals = poetry
skip_install = true
commands =
    poetry install --no-root --only build
    pip install -c tests/pip-constraints.txt .
    poe lint
    pytest
"""

[tool.poe]
envfile = [".env.defaults", ".env"]

[tool.poe.tasks]
start = { cmd = "python dev/manage.py runserver localhost:8000", help = "Start dev server (press F5 on vscode)" }
docs = "poetry run make -C docs html"
lint = [
    { cmd = "python -m black --check src tests dev" },
    { cmd = "python -m isort --check-only src tests dev" },
    { cmd = "pyright" },
    { cmd = "pydocstyle src" },
    { cmd = "rstcheck --report-level warning README.rst docs/*.rst" },
]
test-cov = [
    { cmd = "coverage run" },
    { cmd = "coverage combine" },
    { cmd = "coverage lcov -o coverage/lcov.info" },
    { cmd = "coverage report" },
]
